[package]
name = "cyclonedds-helloworld-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyclors = { git = "https://github.com/gmartin82/cyclors", branch = "cyclonedds-psmx", features = ["iceoryx"] }
